[gd_scene load_steps=3 format=3 uid="uid://d30qap5ik1mye"]

[ext_resource type="Script" uid="uid://bqs70cpqsciwh" path="res://scripts/gui/components/round/round.gd" id="1_7ts5f"]
[ext_resource type="Script" uid="uid://r3kffwi46tpe" path="res://scripts/gui/components/answer_animations.gd" id="2_gk7nc"]

[node name="Round" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7ts5f")

[node name="AnswersAnimation" type="Node" parent="."]
script = ExtResource("2_gk7nc")

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="animation_done" from="AnswersAnimation" to="." method="_on_exit_tween_animation_done"]
